Frogger: Collisions detection, car colors and smarter spawning

--- a/heimadaemi/verkefni1/frogger.html
+++ b/heimadaemi/verkefni1/frogger.html
@@ -34,6 +34,7 @@ main()
 </head>
 
 <body>
-<canvas id="gl-canvas" width="512" height="512">
+<canvas id="gl-canvas" width="512" height="512"></canvas>
+<p id="scoreboard">This is a string</p>
 </body>
 </html>
