--- a/heimadaemi/verkefni1/frogger.html
+++ b/heimadaemi/verkefni1/frogger.html
@@ -35,6 +35,6 @@ main()
 
 <body>
 <canvas id="gl-canvas" width="512" height="512"></canvas>
-<p id="scoreboard">This is a string</p>
+<p id="scoreboard">Scoreboard placeholder</p>
 </body>
 </html>
