--- a/heimadaemi/verkefni2/fish.html
+++ b/heimadaemi/verkefni2/fish.html
@@ -42,12 +42,12 @@ Max speed 0.001<input id="maxSpeedSlider" type="range"
 </div>
 <div>
 Cohesion neighbourhood 0.05<input id="cohesionNeighbourhood" type="range"
- min="0.05" max="3.5" step="0.1" value="0.5" />
+ min="0.05" max="3.5" step="0.1" value="0.7" />
  3.5
 </div>
 <div>
 Alignment neighbourhood 0.05<input id="alignmentNeighbourhood" type="range"
- min="0.05" max="3.5" step="0.1" value="0.5" />
+ min="0.05" max="3.5" step="0.1" value="0.7" />
  3.5
 </div>
 <div>
@@ -56,12 +56,23 @@ Separation neighbourhood 0.05<input id="separationNeighbourhood" type="range"
  3.5
 </div>
 <div>
+Shark aversion neighbourhood 0.05<input id="sharkAversionNeighbourhood" type="range"
+ min="0.05" max="3.5" step="0.1" value="0.3" />
+ 3.5
+</div>
+<
+<div>
 Fish size 0.1<input id="fishSize" type="range"
  min="0.1" max="1.0" step="0.05" value="0.6" />
 1.0
 </div>
 <button id="addFish">Add fish</button>
 <button id="removeFish">Remove fish</button>
+<button id="addRogue">Add rogue</button>
+<button id="removeRogue">Remove rogue</button>
+<button id="addShark">Add shark</button>
+<button id="removeShark">Remove shark</button>
+<button id="showDirection">Show direction</button>
 <button id="reset">Reset</button>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
