--- a/heimadaemi/verkefni2/fish.html
+++ b/heimadaemi/verkefni2/fish.html
@@ -60,7 +60,6 @@ Shark aversion neighbourhood 0.05<input id="sharkAversionNeighbourhood" type="ra
  min="0.05" max="3.5" step="0.1" value="0.3" />
  3.5
 </div>
-<
 <div>
 Fish size 0.1<input id="fishSize" type="range"
  min="0.1" max="1.0" step="0.05" value="0.6" />
@@ -73,7 +72,9 @@ Fish size 0.1<input id="fishSize" type="range"
 <button id="addShark">Add shark</button>
 <button id="removeShark">Remove shark</button>
 <button id="showDirection">Show direction</button>
+<button id="borderAversion">Border aversion</button>
 <button id="reset">Reset</button>
+<br/>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
 
