--- a/heimadaemi/daemi6/VeggurGolf.html
+++ b/heimadaemi/daemi6/VeggurGolf.html
@@ -51,5 +51,6 @@ void main()
 
 <img id = "VeggImage" src = "brick29.jpg" hidden></img>
 <img id = "GolfImage" src = "WoodPlanks.jpg" hidden></img>
+<img id = "LoftImage" src = "clouds.jpg" hidden></img>
 </body>
 </html>
