Centipede hitting logic

--- a/heimadaemi/verkefni3/centipede.html
+++ b/heimadaemi/verkefni3/centipede.html
@@ -7,6 +7,7 @@
 	<body>
         <canvas id="c"  width="800" height="800"></canvas>
 		<script src="js/three.js"></script>
+		<script src="node_modules/semaphore/lib/semaphore.js"></script>
         <script src="js/examples/js/controls/OrbitControls.js"></script>
 		<script type="text/javascript" src="centipede.js"></script>
 	</body>
