Final work on centipede?

--- a/heimadaemi/verkefni3/centipede.html
+++ b/heimadaemi/verkefni3/centipede.html
@@ -9,6 +9,11 @@
 		<script src="js/three.js"></script>
 		<script src="node_modules/semaphore/lib/semaphore.js"></script>
         <script src="js/examples/js/controls/OrbitControls.js"></script>
+		<!--script src="js/examples/js/renderers/CSS2DRenderer.js"></script>
+		<script src="node_modules/three/examples/jsm/renderers/CSS2DRenderer.js"></script-->
 		<script type="text/javascript" src="centipede.js"></script>
+		<p id="scoreboard">Scoreboard placeholder</p>
+		<p id="rules">Rules placeholder</p>
 	</body>
+
 </html>
